# Connect

./: README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/api/: __init__.py  admin.py  alumni.py  approve.py  auth.py  event.py  image.py  notice.py  skills.py  users.py
backend/core/: security.py
backend/models/: __init__.py  alumni.py  event.py  notice.py  user.py
backend/schema/: alumni.py  auth.py  event.py  notice.py
conf/: nginx.conf
frontend/: .prettierrc  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: structure.txt
prisma/: schema.prisma
src/: middleware.ts  middleware.tsx
src/app/: globals.css  layout.tsx  page.tsx  structure.txt
src/components/: AboutFull.tsx  AboutSection.tsx  Ad.tsx  AddPost.tsx  AdminApproval.tsx  AdminLayout.tsx  AdminNoticePanel.tsx  AdminPanel.tsx  AlumniBatchSelector.tsx  AlumniCard.tsx  AlumniTable.tsx  AlumniViewPage.tsx  AuthInitializer.tsx  BIrthdays.tsx  Comments.tsx  CompanySection.tsx  DotMenu.tsx  EventCard.tsx  EventList.tsx  Feed.tsx  Footer.tsx  FriendRequests.tsx  GoogleSignInButton.tsx  HeroSection.tsx  LeftMenu.tsx  MobileMenu.tsx  Navbar.tsx  NoticeBoard.tsx  NoticeForm.tsx  NoticeList.tsx  NoticeRotator.tsx  Post.tsx  ProfileCard.tsx  RightMenu.tsx  SearchBar.tsx  Sidebar.tsx  Stories.tsx  UserApproval.tsx  UserButton.tsx  UserInfoCard.tsx  (+2 more)
src/context/: ServiceContext.tsx
src/lib/: auth.config.ts  auth.ts  config.ts  db.ts  mongodb.ts  (+1 more)
src/models/: post.ts  (+6 more)
types/: next-auth.d.ts
(+141 files in other folders)
